<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unsplash"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvHelloUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:text="@string/hello_user"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvChooseLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/please_choose_level"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />


    <Button
        android:id="@+id/easy"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/easy"
        android:textSize="25sp" />

    <Button
        android:id="@+id/medium"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_weight="2"
        android:text="@string/medium"
        android:textSize="25sp" />

    <Button
        android:id="@+id/hard"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="2"
        android:text="@string/hard"
        android:textSize="25sp" />

</LinearLayout>