<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/unsplash"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/start_test"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/start"
            android:textSize="35sp" />


        <Button
            android:id="@+id/info"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/info"
            android:textSize="30sp" />


        <Button
            android:id="@+id/about"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/about"
            android:textSize="25sp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textSize="25sp" />


    </LinearLayout>
</layout>