<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/unsplash"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:textSize="25sp" />


        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:textSize="25sp" />


        <Button
            android:id="@+id/testRules"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/test_rules"
            android:textSize="25sp" />

        <Button
            android:id="@+id/about"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:text="@string/about"
            android:textSize="30sp" />


    </LinearLayout>
</layout>