<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/unsplash">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="@string/register_1_upper"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/user2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="250dp"
            android:layout_marginRight="40dp"
            android:drawableStart="@drawable/account"
            android:drawablePadding="5dp"
            android:gravity="start"
            android:autofillHints="name"
            android:hint="@string/username"
            android:inputType="text"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="320dp"
            android:layout_marginRight="40dp"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="5dp"
            android:gravity="start"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textCursorDrawable="@null" />

        <ImageView
            android:id="@+id/toggle_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="330dp"
            android:layout_marginTop="330dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/visible_password_on_off"
            android:scaleType="centerCrop"
            android:src="@drawable/eye_off" />


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="510dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/round_button_2"
            android:gravity="center"
            android:text="@string/register_uppercase"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="25sp" />


    </RelativeLayout>
</layout>