<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/unsplash">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/user1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="250dp"
            android:layout_marginRight="40dp"
            android:autofillHints=""
            android:drawableStart="@drawable/account"
            android:drawablePadding="5dp"
            android:gravity="start"
            android:hint="@string/username"
            android:inputType="text"
            android:textCursorDrawable="@null"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="320dp"
            android:layout_marginRight="40dp"
            android:autofillHints=""
            android:drawableStart="@drawable/lock"
            android:drawablePadding="5dp"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/toggle_view1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="330dp"
            android:layout_marginTop="330dp"
            android:clickable="true"
            android:contentDescription="@string/visible_password_on_off"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/eye_off" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="480dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/round_button_2"
            android:gravity="center"
            android:text="@string/login_uppercase"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="25sp" />


    </RelativeLayout>

</layout>