<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"
        />


    <RadioGroup
        android:id="@+id/radioGroupSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical60"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbSortByCountry"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:text="@string/by_country"
            android:textColor="@color/purple_500" />

        <RadioButton
            android:id="@+id/rbSortByCapital"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:text="@string/by_capital"
            android:textColor="@color/purple_500" />

    </RadioGroup>

    <Button
        android:id="@+id/btFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_letter"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineVertical60"
app:layout_constraintEnd_toStartOf="@id/btFilter"
        />

    <TextView
        android:id="@+id/tvSelectedLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/filter_all"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="*"/>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCountriesList"
        android:clipChildren="false"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupSort"
        tools:listitem="@layout/country_item" />


</androidx.constraintlayout.widget.ConstraintLayout>